# TITrig

./: CMakeLists.txt  README.md  makefile
src/: Geometry.c  Geometry.h  GraphicsExt.c  GraphicsExt.h  LabelPoint.c  LabelPoint.h  Library.c  Library.h  Main.c  Main.h  RightTriangle.c  RightTriangle.h  Settings.c  Settings.h  Simplifiers.c  Simplifiers.h  System.c  System.h  Triangle.c  Triangle.h  Trigonometry.c  Trigonometry.h  Types.h
src/AutoTriangle/: DynamicTriangle.c  DynamicTriangle.h
src/DynamicTriangle/: DynamicTriangle.c  DynamicTriangle.h
src/LabelPoint/: DataPoint.c  DataPoint.h  LabelPoint.c  LabelPoint.h
src/Right/: RightDrawFunctions.c  RightDrawFunctions.h  RightOperability.c  RightOperability.h  RightTriangle.c  RightTriangle.h
